--- a/Net Core MySQL/Centurion/Centurion/API.csproj
+++ b/Net Core MySQL/Centurion/Centurion/API.csproj
@@ -26,5 +26,11 @@
     <ProjectReference Include="..\Catch\Catch.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+    <ProjectReference Include="..\Helpers\Helpers.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\Session\Session.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
   </ItemGroup>
 </Project>
