--- a/Net Core MySQL/Centurion/Entities/Entities.csproj
+++ b/Net Core MySQL/Centurion/Entities/Entities.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <Folder Include="Interfaces\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Enums\Enums.csproj" />
+  </ItemGroup>
 </Project>
