--- a/Net Core MySQL/Centurion/Services/Services.csproj
+++ b/Net Core MySQL/Centurion/Services/Services.csproj
@@ -19,5 +19,6 @@
     <ProjectReference Include="..\Entities\Entities.csproj" />
     <ProjectReference Include="..\Catch\Catch.csproj" />
     <ProjectReference Include="..\Enums\Enums.csproj" />
+    <ProjectReference Include="..\Session\Session.csproj" />
   </ItemGroup>
 </Project>
